hphp/hack/test/typecheck/fc_enum_7.php.exp
File "fc_enum_7.php", line 10, characters 14-16:
Bar is uninstantiable (Typing[4002])
File "fc_enum_7.php", line 3, characters 6-8:
Declaration is here
